@@ -1,3 +1,10 @@
+Thu Nov 18 10:27:35 EST 1999 Ben Collins <bcollins@debian.org>
+
+  * utils/start-stop-daemon.c: Added ability for user.group arg to
+    --chuid. Also, always call initgroups() when using --chuid.
+  * utils/start-stop-daemon.8: Document above change, also add note to the
+    --make-pidfile option concerning its problem with daemons that fork
+
 Fri Nov 12 21:21:21 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
   * Rename japanses translation to just jp
